# a2a

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_mcp_server.py
.claude/: CLAUDE.md  status.md
.claude/plans/: smart-task-router.md
.claude/templates/: spec.md  tasks.md
.github/workflows/: security.yml
agents/: __init__.py  base.py  llm_agent.py  registry.py  simple_agent.py
agents/chain/: __init__.py  base.py  editor.py  models.py  pipeline.py  publisher.py  writer.py
agents/graph/: __init__.py  graph.py  nodes.py  runner.py  state.py
agents/research/: __init__.py  base.py  code_search.py  doc_search.py  merge.py  models.py  orchestrator.py  web_search.py
agents/router/: __init__.py  analyzer.py  executor.py  models.py  router.py  specialist_agents.py  synthesizer.py
auth/: __init__.py  permissions.py
docs/: README.md
docs/enterprise-architecture/: README.md
docs/platform-architecture/: README.md
docs/software-architecture/: README.md  chain-pattern.md  langgraph-execution-example.md  langgraph-execution-example_ita.md  langgraph-pattern.md  router-pattern.md
examples/: llm_demo.py
protocol/: __init__.py  api.py  chain_router.py  graph_api.py  mcp_server.py  router_api.py  sse.py
scripts/: init-db.sql
specs/: future-demos.md  research-assistant.md  research-assistant.tasks.md
static/chain/: app.js  index.html  style.css
static/graph/: app.js  index.html  style.css
storage/: __init__.py  base.py  file.py  memory.py  postgres.py
(+34 files in other folders)
